--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ baseurl: ""                    # must stay empty for orgname.github.io root
 theme: jekyll-theme-midnight
 github_username: prangelab
 
+sass:
+  sass_dir: assets/css
+
 nav:
   - name: Home
     link: /
