--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Epigenetic and transcriptional regulation in cardiometabolic disea
 url: "https://prangelab.org"   # custom domain
 baseurl: ""                    # must stay empty for orgname.github.io root
 
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
 github_username: prangelab
 
 sass:
